--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <table cellspacing = "20">
   <tr>
-    <td><img src="D:\Courses\Web Dev\Atom Web Development\HTML Personal site\circle-cropped.PNG" alt="Anmol's Image"></td>
+    <td><img src="circle-cropped.png" alt="Anmol's Image"></td>
     <td><h1> Anmol Dilipkumar Chorgasti </h1>
     <p> <em><strong>A Mechanical Engineer chasing his entrepreneurial dream</strong></em></p>
   </tr>
