--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <td>⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>Leadsership</td>
+          <td>Leadership</td>
           <td>⭐⭐⭐</td>
         </tr>
       </td>
