--- a/contactdetails.html
+++ b/contactdetails.html
@@ -10,7 +10,7 @@
     <li><strong>Phone Number:</strong> +919880820000</li>
     </ul>>
     <hr>
-  <form action="mailto:anmol8dilip@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:anmolchorgasti@gmail.com" method="post" enctype="text/plain">
     <h4>If you would like to get in touch with me, enter your details below</h4>
     <label>Your Name:</label>
     <input type="text" name="Your Name" value=""><br />
