--- a/contactdetails.html
+++ b/contactdetails.html
@@ -22,7 +22,7 @@
     <textarea name="Your Message" rows="10" cols="80"></textarea>
     <br>
     <label>Submit:</label>
-    <input type="submit" name="" value="">
+    <input type="submit"  value="submit">
 </form>
   </body>
 </html>
