--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><strong><a href="#http://mcaconsulting.co.in/">MCA Consulting</a></strong></td>
+        <td><strong><a href="http://mcaconsulting.co.in/">MCA Consulting</a></strong></td>
         <td> Consulting, Data Analytics </td>
         <td> June 8, 2020 - Present </td>
       </tr>
@@ -41,7 +41,7 @@
         <td> October 16, 2019 - February 29, 2020 </td>
       </tr>
       <tr>
-        <td><strong><a href="#https://www.bosch.in/">Bosch Ltd.</a></strong></td>
+        <td><strong><a href="https://www.bosch.in/">Bosch Ltd.</a></strong></td>
         <td>Project Work </td>
         <td>June 5, 2017 - July 5, 2017 </td>
       </tr>
